--- a/App_Templates/Skin_1/template.master
+++ b/App_Templates/Skin_1/template.master
@@ -74,7 +74,7 @@
             					<li><a href="http://www.shopbrassbellmusic.com/categories/Band-40.html">Band</a></li>
             					<li><a href="http://www.shopbrassbellmusic.com/categories/Sheet-Music-Books-95.html">Print Music</a></li>
             					<li><a href="http://www.shopbrassbellmusic.com/categories/Accessories-Gifts-166.html">Accessories &amp; Gifts</a></li>
-          						<li><a href="http://www.shopbrassbellmusic.comhttp://www.shopbrassbellmusic.com/categories.php">View All</a></li>
+          						<li><a href="http://www.shopbrassbellmusic.com/categories.php">View All</a></li>
           					</ul>
         				  </li>
 						  <li class="dropdown">
@@ -92,7 +92,7 @@
           					<a href="http://www.shopbrassbellmusic.com" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">About Us<span class="caret"></span></a>
           					<ul class="dropdown-menu" role="menu">
             					<li><a href="http://www.shopbrassbellmusic.com/contact_us.php">Contact Us</a></li>
-    							<li><a href="http://www.shopbrassbellmusic.com/staff.php">Meet Our Staff</a></li>
+    							<li><a href="http://www.brassbellmusic.com/t-employees.aspx">Meet Our Staff</a></li>
 								<li><a href="http://www.brassbellmusic.com/t-aboutus.aspx">About Us</a></li>
           					</ul>
         				</li>
