updated .retail-location padding

--- a/App_Themes/Skin_1/style.css
+++ b/App_Themes/Skin_1/style.css
@@ -885,7 +885,7 @@ margin:0 auto;
 }
 .retail-location
 {
-    padding: 12px;
+    padding: 1rem;
     background: #efefef;
     text-align: center;
     border: 1px solid #fff;
