--- a/App_Themes/Skin_1/_bootstrap.css
+++ b/App_Themes/Skin_1/_bootstrap.css
@@ -3754,29 +3754,23 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-width: 1px 0 0;
 }
 .navbar-brand {
-  float: left;
-  margin: 1.6rem .4rem;
-  font-size: 18px;
-  line-height: 2rem;
-}
+    display: inline-block;
+		margin: 1.6rem .4rem;
+		line-height: 2rem;
+	}
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
 }
-@media (min-width: 768px) {
-  .navbar > .container .navbar-brand {
-    margin-left: -15px;
-  }
-}
 .navbar-toggle {
     position: relative;
-    float: right;
+    float: left;
     padding: .9rem 1rem;
     background-color: transparent;
     background-image: none;
     border: 1px solid transparent;
     border-radius: 4px;
-    margin: 1.9rem 1.7rem;
+    margin: 1.4rem;
 }
 .navbar-toggle .icon-bar {
   display: block;
