--- a/App_Themes/Skin_1/_bootstrap.css
+++ b/App_Themes/Skin_1/_bootstrap.css
@@ -1626,6 +1626,9 @@ output {
   color: #555555;
   vertical-align: middle;
 }
+.rectangle {
+  border-radius: 0px !important;
+}
 .form-control {
     display: block;
     width: 100%;
@@ -1637,7 +1640,6 @@ output {
     background-color: #fff;
     background-image: none;
     border: 1px solid #ccc;
-    border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
@@ -2328,6 +2330,9 @@ input[type="button"].btn-block {
 }
 .glyphicon:empty {
   width: 1em;
+  font-size: 2rem;
+  z-index: 3;
+  padding-right: 3rem; 
 }
 .glyphicon-asterisk:before {
   content: "\2a";
@@ -3389,6 +3394,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
     position: relative;
     font-size: 0;
     white-space: nowrap;
+    cursor:pointer;
 }
 .input-group-btn:first-child > .btn {
   margin-right: -1px;
