--- a/App_Themes/Skin_1/style.css
+++ b/App_Themes/Skin_1/style.css
@@ -51,6 +51,13 @@ html,body
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
 
+.glyph-button:active {
+    outline: 0;
+    background-image: none; 
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 .fancy-btn {
     display: inline-block;
     font-weight: 500;
