changed where banner will  be updated

--- a/App_Templates/Skin_1/template.master
+++ b/App_Templates/Skin_1/template.master
@@ -114,6 +114,8 @@
   			</div>
 		</nav>
 
+		<aspdnsf:Topic runat="server" TopicName="0-home-billboard-image" />
+
 		<div class="main-content-wrapper">
 			<aspdnsf:Topic runat="server" TopicName="0-product-add-this" />
 			<div class="main-background">
