fixed banner showing on all pages

--- a/App_Themes/Skin_1/style.css
+++ b/App_Themes/Skin_1/style.css
@@ -1118,6 +1118,12 @@ h1.product-page-header {
 
 .masthead {
 	margin-bottom: 1rem;
+	width: 100vw;
+  	position: relative;
+  	left: 50%;
+  	right: 50%;
+  	margin-left: -50vw;
+  	margin-right: -50vw;
 }
 
 .masthead img {
