--- a/App_Themes/Skin_1/style.css
+++ b/App_Themes/Skin_1/style.css
@@ -125,11 +125,25 @@ html,body
 	display: none;
 }
 
+.navbar-brand {
+	float: none;
+   	display: block;
+   	position: absolute;
+   	left: calc(50% - 82px);
+   	height: auto;
+   	margin-top: 1px;
+   	padding-top: 1.5rem;
+}
+
 @media only screen and (min-width: 769px) {
 	.navbar-brand {
 		float: left;
+		display: block;
+		position: inherit;
 		margin: 1.6rem .4rem;
 		line-height: 2rem;
+		padding: 0;
+		left: auto;
 	}
 
 	.navbar-brand img {
@@ -1118,12 +1132,8 @@ h1.product-page-header {
 
 .masthead {
 	margin-bottom: 1rem;
-	width: 100vw;
+	width: 100%;
   	position: relative;
-  	left: 50%;
-  	right: 50%;
-  	margin-left: -50vw;
-  	margin-right: -50vw;
 }
 
 .masthead img {
@@ -1393,10 +1403,10 @@ a.brand-links {
        margin-bottom:0px;
    }
 
- .contact-form
- {
-     width:50%;
- }
+ 	.contact-form
+ 	{
+    	 width:50%;
+ 	}	
 .subcat-grid-image-wrapper
 {
     padding-left:15px;
