--- a/App_Templates/Skin_1/template.master
+++ b/App_Templates/Skin_1/template.master
@@ -136,18 +136,8 @@
 			</div>
 		</div>
 
-		<div class="footer-wrapper">
-			<div class="bb-container">
-				<div class="row footer-row">
-					<aspdnsf:Topic runat="server" TopicName="0-template-footer-menus" />
-					<div class="clearfix"></div>
-				</div>
-				<div class="row copyright-row">
-					<div class="col-xs-12 copyright">
-						<aspdnsf:Topic runat="server" TopicName="0-template-footer-copyright" />
-					</div>
-				</div>
-			</div>
+		<div class="footer-wrapper">>
+			<aspdnsf:Topic runat="server" TopicName="0-footer" />
 		</div>
 	</form>
 
