fixed template bug for when on lessons page

--- a/App_Templates/Skin_1/template.master
+++ b/App_Templates/Skin_1/template.master
@@ -67,6 +67,9 @@
 				var topBanner = document.getElementById("top-banner");
 				topBanner.innerHTML = `<aspdnsf:Topic runat="server" TopicName="0-home-billboard-image" />`
 			}
+
+			var search = document.getElementById("Search");
+			search.innerHTML = `<custom:search id="Search" runat="server"></custom:search>`
 		</script>
 
 		<div class="main-content-wrapper">
