--- a/App_Templates/Skin_1/template.master
+++ b/App_Templates/Skin_1/template.master
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 
-		<div class="footer-wrapper">>
+		<div class="footer-wrapper">
 			<aspdnsf:Topic runat="server" TopicName="0-footer" />
 		</div>
 	</form>
