bootstrap table height fix (now always 100%)

--- a/App_Themes/Skin_1/style.css
+++ b/App_Themes/Skin_1/style.css
@@ -116,15 +116,17 @@ h1, h2, h3, h4, h5, h6,
 	padding: 0 15px;
 }
 
-.welcome-text-wrapper h1 {
-	font-size: 2rem;
-	font-weight: bold;
-}
-
-.welcome-text-wrapper p {
-	font-size: 1.8rem;
-	font-family: Arial;
-}
+.row {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display:         flex;
+	flex-wrap: wrap;
+  }
+  .row > [class*='col-'] {
+	display: flex;
+	flex-direction: column;
+  }
 
 @media only screen and (min-width: 768px) {
 	.top-nav {
@@ -1420,12 +1422,24 @@ a.brand-links {
 
 .retail-info-box {
 	padding-left: 5%;
-    padding-right: 5%;
+	padding-right: 5%;
+	height: 100%;
 }
 
 .welcome-text-wrapper {
 	margin-left: 5%;
-    margin-right: 5%;
+	margin-right: 5%;
+	height: 100%;
+}
+
+.welcome-text-wrapper h1 {
+	font-size: 2rem;
+	font-weight: bold;
+}
+
+.welcome-text-wrapper p {
+	font-size: 1.8rem;
+	font-family: Arial;
 }
 
 /*<<<<<<<<<<<   CUSTOM MEDIA QUERIES HERE   >>>>>>>>>>>>*/
