--- a/App_Themes/Skin_1/rentals.css
+++ b/App_Themes/Skin_1/rentals.css
@@ -47,9 +47,9 @@ padding-right:2px;
 }
 .rental-instrument-listing
 {
-margin-bottom:18px;
+  margin-bottom:18px;
   box-shadow: 0px 0px 3px rgba(0,0,0,.3);
-padding:12px;
+  padding: 12px 12px 0 12px;
 }
 .rental-select-dropdown
 {
@@ -90,13 +90,11 @@ text-align:right;
 }
 td.payment-cell
 {
-text-align:right;
+text-align:left;
 }
 .button.rent-instrument-button
 {
     padding: 8px 18px;
     font-size: 12px;
-    background: #A02929;
-    color: #fff;
     margin-right:4px;
 }
