--- a/App_Themes/Skin_1/_bootstrap.css
+++ b/App_Themes/Skin_1/_bootstrap.css
@@ -1518,6 +1518,10 @@ table th[class*="col-"] {
   background-color: #faf2cc;
 }
 @media (max-width: 767px) {
+  html, body {
+    -webkit-overflow-scrolling: touch;
+  }
+
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
